--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
 theme: jekyll-theme-cayman
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
+kramdown:
